@@ -1,9 +1,12 @@
 package org.cyclops.integrateddynamics.infobook.pageelement;
 
 import com.google.common.collect.Lists;
+import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.util.context.ContextMap;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.display.RecipeDisplayEntry;
+import net.minecraft.world.item.crafting.display.SlotDisplayContext;
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.api.distmarker.OnlyIn;
 import net.neoforged.neoforge.fluids.FluidStack;
@@ -13,11 +16,11 @@ import org.cyclops.cyclopscore.infobook.InfoSection;
 import org.cyclops.cyclopscore.infobook.ScreenInfoBook;
 import org.cyclops.cyclopscore.infobook.pageelement.RecipeAppendix;
 import org.cyclops.integrateddynamics.RegistryEntries;
+import org.cyclops.integrateddynamics.core.recipe.display.RecipeDisplaySqueezer;
 import org.cyclops.integrateddynamics.core.recipe.type.RecipeSqueezer;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 /**
  * Squeezer recipes.
@@ -32,14 +35,10 @@ public class SqueezerRecipeAppendix extends RecipeAppendix<RecipeSqueezer> {
     private static final AdvancedButtonEnum INPUT_ITEM = AdvancedButtonEnum.create();
     private static final AdvancedButtonEnum RESULT_FLUID = AdvancedButtonEnum.create();
 
-    private final List<AdvancedButtonEnum> resultItems;
+    private List<AdvancedButtonEnum> resultItems;
 
-    public SqueezerRecipeAppendix(IInfoBook infoBook, RecipeHolder<? extends RecipeSqueezer> recipe) {
-        super(infoBook, recipe);
-        resultItems = Lists.newArrayList();
-        for (int i = 0; i < recipe.value().getOutputItems().size(); i++) {
-            resultItems.add(AdvancedButtonEnum.create());
-        }
+    public SqueezerRecipeAppendix(IInfoBook infoBook, Supplier<RecipeDisplayEntry> recipeDisplaySupplier) {
+        super(infoBook, recipeDisplaySupplier);
     }
 
     @Override
@@ -49,7 +48,11 @@ public class SqueezerRecipeAppendix extends RecipeAppendix<RecipeSqueezer> {
 
     @Override
     protected int getHeightInner() {
-        return (recipe.value().getOutputFluid().isPresent() ? SLOT_OFFSET_Y : 0) + resultItems.size() * SLOT_OFFSET_Y - 3;
+        RecipeDisplayEntry recipeDisplay = getRecipeDisplay();
+        if (recipeDisplay == null) {
+            return 10;
+        }
+        return (!((RecipeDisplaySqueezer) recipeDisplay.display()).outputFluid().isEmpty() ? SLOT_OFFSET_Y : 0) + resultItems.size() * SLOT_OFFSET_Y - 3;
     }
 
     @Override
@@ -59,6 +62,18 @@ public class SqueezerRecipeAppendix extends RecipeAppendix<RecipeSqueezer> {
 
     @Override
     public void bakeElement(InfoSection infoSection) {
+        resultItems = Lists.newArrayList();
+
+        RecipeDisplayEntry recipeDisplay = getRecipeDisplay();
+        if (recipeDisplay == null) {
+            return;
+        }
+
+        RecipeDisplaySqueezer display = ((RecipeDisplaySqueezer) recipeDisplay.display());
+        for (int i = 0; i < display.outputItems().size(); i++) {
+            resultItems.add(AdvancedButtonEnum.create());
+        }
+
         renderItemHolders.put(INPUT_ITEM, new ItemButton(getInfoBook()));
         for (AdvancedButtonEnum resultItem : resultItems) {
             renderItemHolders.put(resultItem, new ItemButton(getInfoBook()));
@@ -74,23 +89,29 @@ public class SqueezerRecipeAppendix extends RecipeAppendix<RecipeSqueezer> {
         gui.drawArrowRight(guiGraphics, x + middle - 3, y + 2);
 
         // Prepare items
+        RecipeDisplayEntry recipeDisplay = getRecipeDisplay();
+        if (recipeDisplay == null) {
+            return;
+        }
         int tick = getTick(gui);
-        ItemStack inputItem = recipe.value().getInputIngredient() == null ? null : prepareItemStacks(recipe.value().getInputIngredient().getItems(), tick);
-        List<ItemStack> outputItems = recipe.value().getOutputItems().stream()
-                .map(RecipeSqueezer.IngredientChance::getIngredientFirst)
-                .collect(Collectors.toList());
-        Optional<FluidStack> outputFluid = recipe.value().getOutputFluid();
+        ContextMap contextMap = SlotDisplayContext.fromLevel(Minecraft.getInstance().level);
+        RecipeDisplaySqueezer display = ((RecipeDisplaySqueezer) recipeDisplay.display());
+        ItemStack inputItem = prepareItemStacks(display.inputIngredient().resolveForStacks(contextMap), tick);
+        List<ItemStack> outputItems = display.outputItems().stream()
+                .map(pair -> pair.getLeft().resolveForFirstStack(contextMap))
+                .toList();
+        FluidStack outputFluid = display.outputFluid();
 
         // Items
         renderItem(gui, guiGraphics, x + SLOT_INPUT_OFFSET_X, y, inputItem, mx, my, INPUT_ITEM);
         int slotOffset = 0;
         for (int i = 0; i < outputItems.size(); i++) {
             renderItem(gui, guiGraphics, x + SLOT_OUTPUT_OFFSET_X, y + slotOffset, outputItems.get(i), mx, my, resultItems.get(i),
-                    recipe.value().getOutputItems().get(i).getChance());
+                    display.outputItems().get(i).getRight());
             slotOffset += SLOT_OFFSET_Y;
         }
-        if (outputFluid.isPresent()) {
-            renderFluid(gui, guiGraphics, x + SLOT_OUTPUT_OFFSET_X, y + slotOffset, outputFluid.get(), mx, my, RESULT_FLUID);
+        if (!outputFluid.isEmpty()) {
+            renderFluid(gui, guiGraphics, x + SLOT_OUTPUT_OFFSET_X, y + slotOffset, outputFluid, mx, my, RESULT_FLUID);
         }
 
         renderItem(gui, guiGraphics, x + middle, y, getCrafter(), mx, my, false, null);
